StudyTable modal comment form: fix alignment
Uses tables but they are easy to predict

--- a/client/components/StudiesTable.scss
+++ b/client/components/StudiesTable.scss
@@ -126,6 +126,21 @@ $column_width: 300px;
       border-top: 1px solid $gray;
       border-bottom-left-radius: $btn_radius;
       border-bottom-right-radius: $btn_radius;
+
+      form table {
+        td {
+          vertical-align: top;
+
+          &:first-child {
+            width: 100%;
+            padding-right: 10px;
+
+            textarea {
+              width: 100%;
+            }
+          }
+        }
+      }
     }
 
     ul.history {
